# web

./: .ceignore  .gitignore  AGENTS.md  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  DEPLOY.md  LICENSING.md  README.md
ce-adapter/: Cargo.toml  README.md
ce-adapter/src/: caps.rs  ingest.rs  lib.rs  main.rs  profile.rs  protocol.rs  serve.rs  spawn.rs
ce-app/templates/rust-backend/: .gitignore  Cargo.toml  README.md
ce-app/templates/rust-game/: Cargo.toml  README.md  ce-app.json  game.js  index.html  netgame.js
ce-auth/: Cargo.toml  README.md
ce-auth/src/: auth.rs  console.html  main.rs  secrets.rs  store.rs
ce-bucket/: Cargo.toml  README.md
ce-bucket/src/: index.rs  lib.rs  main.rs  store.rs
ce-cache/: Cargo.toml  README.md
ce-cache/.github/workflows/: ci.yml
ce-cache/src/: archive.rs  caps.rs  host.rs  index.rs  lib.rs  main.rs  proto.rs  sidecar.rs  store.rs
ce-cache/tests/: integration.rs
ce-cdn/: CHANGELOG.md  Cargo.toml  README.md
ce-cdn/.github/workflows/: ci.yml
ce-cdn/docs/: architecture.md  protocol.md
ce-cdn/examples/: presigned_link.rs  put_get_range.rs
ce-cdn/src/: cache.rs  caps.rs  catalog.rs  cidrange.rs  client.rs  edge.rs  host.rs  lib.rs  limits.rs  main.rs  maintain.rs  pop.rs  presign.rs  proto.rs  replication.rs  server.rs
ce-cdn/tests/: integration.rs
ce-ci/: Cargo.toml  README.md  ce-ci.toml
ce-ci/.github/workflows/: ci.yml
ce-ci/src/: cache.rs  cap.rs  config.rs  farm.rs  lib.rs  main.rs  report.rs  shard.rs  verify.rs
ce-coord/: Cargo.toml  README.md
ce-coord/.github/workflows/: ci.yml
ce-coord/src/: collections.rs  lib.rs  merged.rs  replicated.rs  snapshot.rs  stream.rs  testkit.rs
ce-coord/tests/: live.rs  mock_driven.rs  serialization.rs
ce-coord/tests/harness/: mod.rs
ce-db/: CHANGELOG.md  Cargo.toml  README.md
ce-db/.github/workflows/: ci.yml
ce-db/examples/: basic.rs  guarded.rs
ce-db/src/: access.rs  batch.rs  collection.rs  doc.rs  guard.rs  lib.rs  limits.rs  query.rs
ce-db/tests/: edge_cases.rs  guard.rs  live.rs  model_extra.rs  prop_db.rs  realtime_sync.rs
ce-db/tests/harness/: mod.rs
ce-drive/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
ce-drive-client/: CLAUDE.md  Cargo.toml  README.md
ce-drive-client/.github/workflows/: ci.yml
ce-drive-client/examples/: host_and_access.rs
ce-drive-client/src/: client.rs  lib.rs  main.rs  mirror.rs  readplan.rs
ce-drive-client/tests/: client_surface.rs  reply_contract.rs
ce-drive-serve/: CLAUDE.md  Cargo.toml  README.md
ce-drive-serve/.github/workflows/: ci.yml
ce-drive-serve/src/: feed.rs  lib.rs  main.rs  serve.rs  tenant.rs  wire.rs
ce-drive-serve/tests/: authorize.rs  authorize_props.rs  crdt_snapshot.rs  two_node_drive.rs  two_node_full.rs  wire_roundtrip.rs
ce-drive/.github/workflows/: ci.yml
ce-drive/crates/ce-drive-cli/: Cargo.toml
ce-drive/crates/ce-drive-core/: Cargo.toml
ce-drive/crates/ce-drive-mount/: Cargo.toml
ce-drive/crates/ce-drive-wasm/: Cargo.toml  README.md  ce_drive_wasm.d.ts
ce-drive/docs/: architecture.md  design.md
ce-expose/: Cargo.toml  README.md
ce-expose/.github/workflows/: ci.yml
ce-expose/docs/: public-ingress.md  security-review.md
ce-expose/examples/: ingress.toml
ce-expose/src/: agent.rs  caps.rs  consumer.rs  ingress.rs  ingress_config.rs  lib.rs  main.rs  proto.rs  session.rs
ce-fabric/: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh
ce-fabric/.github/workflows/: ci.yml
ce-fabric/Formula/: ce.rb
ce-fabric/crates/ce-cap/: Cargo.toml
ce-fabric/crates/ce-chain/: Cargo.toml
ce-fabric/crates/ce-container/: Cargo.toml
ce-fabric/crates/ce-deploy/: Cargo.toml
ce-fabric/crates/ce-guard/: Cargo.toml
ce-fabric/crates/ce-identity/: Cargo.toml
ce-fabric/crates/ce-mesh/: Cargo.toml
ce-fabric/crates/ce-node/: Cargo.toml
ce-fabric/crates/ce-protocol/: Cargo.toml
ce-fabric/crates/ce-runtime/: Cargo.toml
ce-fabric/crates/ce-tls/: Cargo.toml
ce-fabric/crates/ce-wasm/: Cargo.toml
ce-fabric/docs/: api.md  app-messaging.md  benchmark-2026-05-25.md  capabilities.md  compute-fabric.md  consensus.md  data-layer.md  deployment.md  design.md  frontier.md  guardian.md  heterogeneous-compute.md  heterogeneous-runtime.md  naming-discovery.md  payment-channels.md  primitives.md  protocol.md  relay-incentives.md  roadmap.md  runtime.md  standards.md  sybil-resistance.md  testing.md  threat-model.md
ce-fabric/docs/apps/: scheduler.md
ce-fabric/packaging/aur/: PKGBUILD
ce-fabric/packaging/choco/: ce.nuspec
ce-fabric/packaging/scoop/: ce.json
ce-fabric/packaging/scripts/: update-sha256.sh
ce-fabric/src/: keybackup.rs  main.rs
ce-fleet/: .gitignore  Cargo.toml  README.md
ce-fleet/console/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ce-fleet/docs/: enrollment.md
ce-fleet/enroll-service/: Cargo.toml
ce-fn/: Cargo.toml  README.md
ce-fn/docs/: architecture.md  serve-protocol.md
ce-fn/examples/: handler.py  handlers.json  local_runtime.rs
ce-fn/src/: caps.rs  client.rs  function.rs  lib.rs  placement.rs  protocol.rs  serve.rs
ce-fn/tests/: flow.rs  properties.rs
ce-gke/: CHANGELOG.md  Cargo.toml  README.md
ce-gke/docs/: architecture.md
ce-gke/examples/: batch.json  reconcile_demo.rs  web-full.yaml  web.yaml
ce-gke/src/: auth.rs  controller.rs  daemon.rs  deps.rs  driver.rs  lib.rs  main.rs  placement.rs  protocol.rs  reconcile.rs  rollout.rs  secrets.rs  serve.rs  spec.rs  stack.rs  state.rs
ce-gke/tests/: cli_flow.rs  properties.rs
ce-hub/: Cargo.toml  GIT.md
ce-hub-cli/: Cargo.toml  README.md
ce-hub-cli/src/: identity.rs  main.rs
ce-hub/demo-wasm/: Cargo.toml
ce-hub/modules/: demo.wasm
ce-hub/src/: flag_sink.rs  git_http.rs  instances.rs  main.rs  mesh_bridge.rs  mirror.rs  pulls.rs  repo_read.rs  repos.rs
ce-hub/ui/: README.md  api.js  ce-app.json  diff.js  highlight.js  index.html
sdks/python/: README.md  pyproject.toml
sdks/python/ce/: client.py  (+1 more)
spacegame-wasm/: Cargo.toml  README.md  index.html
spacegame-wasm/src/: game.rs  input.rs  lib.rs  net.rs  render.rs
(+574 files in other folders)
