[package]
name = "ce-adapter"
version = "0.1.0"
edition = "2024"
description = "Dynamically-spawned mesh adapters that bridge a browser/edge endpoint (WebRTC WHIP/WHEP, node services) to the native CE mesh — because browsers cannot open libp2p streams and are not yet full nodes. Spawned on demand via ce-fn, authorized with ce-cap."
license = "MIT"
repository = "https://github.com/ce-net/ce-adapter"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]
keywords = ["ce", "webrtc", "mesh", "adapter", "p2p"]
categories = ["api-bindings", "network-programming", "multimedia"]

[[bin]]
name = "ce-adapter"
path = "src/main.rs"

[dependencies]
ce-rs = { path = "../ce-rs", features = ["serve"] }
ce-cap = { path = "../ce/crates/ce-cap" }
ce-identity = { path = "../ce/crates/ce-identity" }
ce-fn = { path = "../ce-fn" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "process", "io-util", "net", "sync"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
