[package]
name = "ce-cache"
version = "0.1.0"
edition = "2024"
description = "Distributed content-addressed CI/build cache over CE — a Bazel/sccache/Turborepo-style remote cache backed by CE blobs, where content-addressing IS the integrity proof (a returned object whose CID != the requested key is rejected, so cache poisoning is structurally impossible). An application built ON CE primitives, not part of the node."
license = "MIT"
repository = "https://github.com/ce-net/ce-cache"
keywords = ["ce", "build-cache", "bazel", "sccache", "content-addressed"]
categories = ["command-line-utilities", "development-tools", "network-programming"]
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]

# ce-cache is both a small reusable library (the key->CID index, protocol types, archive helpers)
# and the `ce-cache` binary (the CLI + HTTP shim). The library is unit-tested; the binary is over it.
[lib]
name = "ce_cache"
path = "src/lib.rs"

[[bin]]
name = "ce-cache"
path = "src/main.rs"

[dependencies]
# The CE SDK: blobs/objects (put_blob/get_blob/put_object/get_object, content-addressed + CID-verified),
# mesh request/reply, discovery, atlas/history. Depended on by path for the MVP per the build plan.
ce-rs = { path = "../ce-rs" }
# The capability verifier primitive — the host loop authorizes a signed attenuating chain before
# serving or accepting a cache entry (`cache:read` / `cache:write`).
ce-cap = { path = "../ce/crates/ce-cap" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
# Directory artifacts are archived to a single deterministic tar stream before chunking, so a whole
# build output dir becomes one CID.
tar = "0.4"
# The localhost HTTP shim that speaks the Bazel Remote Cache HTTP API + the sccache WebDAV subset.
axum = "0.7"

[dev-dependencies]
# Tests forge capability chains and stand up a tiny in-process mock node to exercise put/get/has.
ce-identity = { path = "../ce/crates/ce-identity" }
