[package]
name = "ce-ci"
version = "0.1.0"
edition = "2024"
description = "Distributed sharded test/CI runner on the CE compute mesh — split a suite across hosts, gather results."
license = "MIT"
repository = "https://github.com/ce-net/ce-ci"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]

[dependencies]
ce-rs = { path = "../ce-rs" }
ce-cap = { path = "../ce/crates/ce-cap" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# For constructing real signed capability chains in cap tests (matches ce-cap's own test setup).
ce-identity = { path = "../ce/crates/ce-identity" }
