[package]
name = "ce-drive-client"
version = "0.1.0"
edition = "2024"
description = "CE Drive client — open a remote drive over the CE mesh by capability, bootstrap a DriveTree replica from the Open snapshot, mirror via Poll + beacon, and list/read/write. An app over CE primitives."
license = "MIT"
repository = "https://github.com/ce-net/ce-drive"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]

[lib]
name = "ce_drive_client"
path = "src/lib.rs"

[[bin]]
name = "ce-drive"
path = "src/main.rs"

[dependencies]
# --- CE substrate (siblings in the ~/ce-net workspace; by path) ---
ce-rs = { path = "../ce-rs" }                            # mesh transport (request) + blobs
ce-cap = { path = "../ce/crates/ce-cap" }               # capability chain encode/decode (to present)
ce-identity = { path = "../ce/crates/ce-identity" }
ce-drive-core = { path = "../ce-drive/crates/ce-drive-core" } # local DriveTree replica for mirroring
ce-drive-serve = { path = "../ce-drive-serve" }         # the shared ce-drive/v1 wire protocol

# --- async + error + serde ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
directories = "5"

[dev-dependencies]
tempfile = "3"
proptest = "1"
# In-process CE nodes for the runnable host+access example.
ce-node = { path = "../ce/crates/ce-node" }
ce-drive-serve = { path = "../ce-drive-serve" }

[patch."https://github.com/ce-net/ce-rs"]
ce-rs = { path = "../ce-rs" }

[patch."https://github.com/ce-net/ce"]
ce-cap = { path = "../ce/crates/ce-cap" }
ce-container = { path = "../ce/crates/ce-container" }
ce-identity = { path = "../ce/crates/ce-identity" }
