[package]
name = "ce-drive-serve"
version = "0.1.0"
edition = "2024"
description = "CE Drive host — serves the ce-drive/v1 AppRequest op set over the CE mesh, authorizing every request against a presented ce-cap chain. An app over CE primitives (AppRequest + blobs + ce-cap); no node changes."
license = "MIT"
repository = "https://github.com/ce-net/ce-drive"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]

[lib]
name = "ce_drive_serve"
path = "src/lib.rs"

[[bin]]
name = "ce-drive-serve"
path = "src/main.rs"

[dependencies]
# --- CE substrate (siblings in the ~/ce-net workspace; by path) ---
ce-rs = { path = "../ce-rs" }                            # mesh transport (request/reply/publish) + blobs
ce-cap = { path = "../ce/crates/ce-cap" }               # capability verifier (authorize on every request)
ce-identity = { path = "../ce/crates/ce-identity" }     # Ed25519 identity (the drive host = the cap root)
ce-drive-core = { path = "../ce-drive/crates/ce-drive-core" } # DriveTree CRDT + content map + share vocab

# --- async + error + serde ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
directories = "5"

[dev-dependencies]
tempfile = "3"
proptest = "1"
# In-process CE nodes for the two-node e2e test (same harness rdev/ce-node tests use).
ce-node = { path = "../ce/crates/ce-node" }
# The remote client, to drive the host loop end-to-end. Dev-only, so the dependency cycle
# (client -> serve) does not affect the normal build graph (Cargo permits dev-dep cycles).
ce-drive-client = { path = "../ce-drive-client" }

# ce-coord and rdev (pulled transitively via ce-drive-core) depend on ce-rs / ce-cap by GIT; redirect
# those git URLs onto the local path copies so the whole graph collapses onto ONE ce-rs (one CeClient,
# one data::Manifest, one cid) and ONE ce-cap. Same trick ce-drive's own workspace uses.
[patch."https://github.com/ce-net/ce-rs"]
ce-rs = { path = "../ce-rs" }

[patch."https://github.com/ce-net/ce"]
ce-cap = { path = "../ce/crates/ce-cap" }
ce-container = { path = "../ce/crates/ce-container" }
ce-identity = { path = "../ce/crates/ce-identity" }
