[workspace]
resolver = "2"
members = ["crates/ce-drive-core", "crates/ce-drive-wasm", "crates/ce-drive-cli", "crates/ce-drive-mount"]

# ce-coord and rdev both depend on `ce-rs` (and ce-cap) by **git**; we depend on them by **path**.
# Without this patch the git copy of `ce-rs` and our path copy are two distinct crates, so a
# `CeClient` produced by ce-rs would not type-check where ce-coord/rdev expect "their" `CeClient`.
# Redirecting the git URL to the local path collapses the graph onto ONE `ce-rs` (one `CeClient`,
# one `data::Manifest`, one `cid`). This is the same trick ce-notes uses.
[patch."https://github.com/ce-net/ce-rs"]
ce-rs = { path = "../ce-rs" }

[patch."https://github.com/ce-net/ce"]
ce-cap = { path = "../ce/crates/ce-cap" }
ce-container = { path = "../ce/crates/ce-container" }
ce-identity = { path = "../ce/crates/ce-identity" }

[profile.release]
opt-level = 3
