[workspace]
resolver = "3"
members = ["enroll-service"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]
repository = "https://github.com/ce-net/ce-fleet"

[workspace.dependencies]
ce-rs = { path = "../ce-rs" }
ce-cap = { path = "../ce/crates/ce-cap" }
ce-identity = { path = "../ce/crates/ce-identity" }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
sha2 = "0.10"
