[package]
name = "ce-fn"
version = "0.1.0"
edition = "2024"
description = "Serverless functions (Cloud Run / Cloud Functions) over CE jobs + atlas — deploy a container/WASM handler, invoke it on atlas-ranked hosts over the mesh, trigger it from pubsub topics."
license = "MIT"
repository = "https://github.com/ce-net/ce-fn"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]
keywords = ["ce", "serverless", "faas", "distributed-compute", "p2p"]
categories = ["api-bindings", "network-programming"]

[[bin]]
name = "ce-fn"
path = "src/bin/ce-fn.rs"

[dependencies]
ce-rs = { path = "../ce-rs", features = ["serve"] }
ce-cap = { path = "../ce/crates/ce-cap" }
ce-identity = { path = "../ce/crates/ce-identity" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "process", "io-util"] }
anyhow = "1"
directories = "5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
proptest = "1"
