[package]
name = "ce-hub"
version = "0.1.0"
edition = "2021"
description = "Thin CLI for hub.ce-net.com — GitHub for ce-net. Wraps the system git binary and the hub HTTP API with CE-identity signed requests."
license = "MIT OR Apache-2.0"

[[bin]]
name = "ce-hub"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
dirs = "5"
