[package]
name = "ce-hub"
version = "0.1.0"
edition = "2021"
description = "Browser-node rendezvous for CE: WebSocket registry for in-browser compute nodes, task dispatch, and live mesh/capacity stats. Runs beside the relay node."

[[bin]]
name = "ce-hub"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "signal", "process", "io-util"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
base64 = "0.22"
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
# gix (gitoxide): pure-Rust git object/tree/commit reads for the hub git layer (SHA-1 objects).
# CONSERVATIVE CHOICE: we use gix DEFAULT features (no default-features=false). A narrow feature set
# (e.g. just "revision") risks failing to compile the read path we depend on — rev_parse_single,
# Object::try_into_commit/try_into_tree/try_into_blob, Commit::tree, Tree::lookup_entry_by_path,
# Tree::iter, Blob::data — because those APIs are gated behind several features whose names drift
# across releases. Defaults guarantee every API used in repo_read.rs is present. This is a heavier
# build, which the relay can absorb (it has swap); correctness/compilability wins over build size.
gix = "0.69"

[profile.release]
opt-level = 2
strip = true
