[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"
description = "A runnable Rust->wasm multiplayer starter: authoritative backend + wgpu/canvas frontend on CE"
license = "MIT"

# cdylib -> the browser instantiates the .wasm directly (raw ABI, no wasm-bindgen).
# rlib   -> a native host can link the same authoritative logic.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
