[package]
name = "ce-drive-wasm"
version = "0.1.0"
edition = "2024"
description = "CE Drive WASM CRDT core — the PURE, I/O-free move-CRDT directory tree + content/version model + path resolution + conflict info, compiled to wasm32 via wasm-bindgen for the in-browser CE node. Holds only the deterministic CRDT state machine + serde; it ingests opaque ops (bytes) the browser fetches via @ce-net/sdk and manages the tree + metadata. File BYTES are never in wasm."
license = "MIT"
repository = "https://github.com/ce-net/ce-drive"

[lib]
name = "ce_drive_wasm"
# `cdylib` for the wasm artifact (wasm-pack / wasm-bindgen); `rlib` so host `cargo test` works.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# CRITICAL: this crate is wasm32-clean. It depends on NOTHING that touches I/O / native sockets —
# no ce-rs, no tokio, no reqwest, no rdev, no libp2p, no ce-coord. Only the deterministic CRDT state
# machine + serde + the wasm-bindgen glue. File bytes/blobs live in the browser via @ce-net/sdk.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
# Surface Rust panics as JS console errors in the browser (tiny, wasm-only-friendly).
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
# Run the wasm-bindgen tests in a headless browser / node when available; host unit tests need none.
wasm-bindgen-test = "0.3"
# Property-based convergence/parity tests for the pure CRDT (host-side `cargo test`, not wasm).
proptest = "1"
