[package]
name = "ce-chain"
version = "0.1.0"
edition = "2024"

[dependencies]
ce-identity = { path = "../ce-identity" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
zstd = "0.13"
sha2 = "0.10"
anyhow = "1"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "chain"
harness = false
